--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 				<br>
 				<br>Available as both <b>Full-Service IT</b> tool and <b>Self-Service</b>.</br>
 				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/Analysis-for-Office-Wiki.aspx">
-				<img src="https://borealisgroup.sharepoint.com/:i:/s/BICommunity/ESjKGjouZOpMuZtxmrLlQMYBKK-PLvYJ9zVqem-gYjiLZg?e=lwsP1J" alt="AfO">
+				<img src="https://user-images.githubusercontent.com/63850645/80611674-35e31700-8a3b-11ea-84c9-b7b5c36d010f.png" alt="AfO">
 				<br><font size="-2">(click here)</font></a></span></p>
                 </div>
             </div>
@@ -715,7 +715,7 @@
 				<br>
 				<br>Currently <b>only</b> available as <b>Self-Service</b> tool.</br>
 				<a href="https://borena.mignetwork.net/coll/cop/supbinet/PowerBi%20Wiki/Home.aspx">
-				<img src="https://borealisgroup.sharepoint.com/:i:/s/BICommunity/EZITNq-MgxxKmFRxQj3L1N8BQaBB1Ird0CGeSCo9uHzYjQ?e=WGWW8H" alt="Power BI">
+				<img src="https://user-images.githubusercontent.com/63850645/80610779-0ed81580-8a3a-11ea-9803-99d107109a66.png" alt="Power BI">
 				<br><font size="-2">(click here)</font></a></span></p>
                 </div>
             </div>
@@ -731,7 +731,7 @@
 				<br>
 				<br>Available as <b>Self-Service</b> tool in specific departments.</br>
 				<a href="https://borena.mignetwork.net/coll/cop/supbinet/Microstrategy%20tool/Home.aspx">
-				<img src="https://borealisgroup.sharepoint.com/:i:/s/BICommunity/EeuJu0tOl81BvlD4eR8iAIEBvaSKbX-EvsOMtnJAs5ANDw?e=tLpLOu" alt="MicroStrategy">
+				<img src="https://user-images.githubusercontent.com/63850645/80611228-a473a500-8a3a-11ea-8c01-201fe0b99d22.png" alt="MicroStrategy">
 				<br><font size="-2">(click here)</font></a></span></p>
                 </div>
             </div>
@@ -747,7 +747,7 @@
 				<br>
 				<br><b>Only</b> available as <b>Self-Service</b> tool in specific departments.</br>
 				<a href="https://www.qlik.com/us/products/qlikview">
-				<img src="https://borealisgroup.sharepoint.com/:i:/s/BICommunity/Efxby3TrwW1Kj4tNISCzFM4BhpxmaA4aZ8JumLnKxyH7xw?e=HBXzTS" alt="Qlick">
+				<img src="https://user-images.githubusercontent.com/63850645/80611526-fe746a80-8a3a-11ea-871c-7259da5bccbe.png" alt="Qlick">
 				<br><font size="-2">(click here)</font></a></span></p>
                 </div>
             </div>
@@ -762,7 +762,7 @@
 				<br>visualizations and analytics capabilities to all users in one product.</br>
 				<br>Available as both <b>Full-Service IT</b> tool and <b>Self-Service</b>.</br>
 				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/Analysis-for-Office-Wiki.aspx">
-				<img src="https://borealisgroup.sharepoint.com/:i:/s/BICommunity/EXY0pnzHXF5OqHYOqAuHdNABU7tVF7siDeBbqQxM_0tFzw?e=C2eKBR" alt="SAP Analytics Cloud">
+				<img src="https://user-images.githubusercontent.com/63850645/80611709-44313300-8a3b-11ea-899b-7b8763958c6d.png" alt="SAP Analytics Cloud">
 				<br><font size="-2">(click here)</font></a></span></p>
                 </div>
             </div>
