--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                         <div id="button11No" style="display: none">
                             <p class="btn center-block"><span class="glyphicon glyphicon-arrow-down"></span></p>
-                            <p class="btn bg-danger text-danger text-wrap">A reporting tool has been chosen! Proceed to <b>step 4</b>.</p>
+                            <p class="btn bg-warning text-warning text-wrap">A reporting tool has been chosen! Please proceed to <b>step 4</b>.</p>
                         </div>
                         <script>
                             function myFunctionB11N() {
@@ -169,7 +169,7 @@
 
             <div id="button1No" style="display: none">
                 <p class="btn center-block"><span class="glyphicon glyphicon-arrow-down"></span></p>
-                <p class="bg-info text-info btn">Are you willing to put the data into the system?</p>
+                <p class="bg-info text-info btn">Are you willing to put the data into a Borealis system?</p>
 
                 <div class="row">
                     <div class="col-xs-6 text-center">
@@ -226,7 +226,7 @@
 
                         <div id="button12No" style="display: none">
                             <p class="btn center-block"><span class="glyphicon glyphicon-arrow-down"></span></p>
-                            <p class="btn bg-danger text-danger text-wrap">The data must be in the system to use this service. Proceed to <b>step 4</b>.</p>
+                            <p class="btn bg-warning text-warning text-wrap">The data must be in the system to use this service. Please proceed to <b>step 4</b>.</p>
                         </div>
                         <script>
                             function myFunctionB12N() {
@@ -300,7 +300,7 @@
     <div class="row">
         <div id="buttonStep2" style="display: none">
             <div class="col-xs-12">
-                <p class="lead text-center bg-info btn text-info center-block">Do you want a high level view on your <b>KPI's through visuals in a Dashboard</b> or do you want to perform a <b>detailed analysis</b> of your data?</p>
+                <p class="lead text-center bg-info btn text-info center-block">Do you want to perform a <b>detailed analysis</b> of your data or do you want a high level view on your <b>KPI's through visuals in a Dashboard</b>?</p>
                 <div class="row">
                     <div class="col-xs-6 text-center">
                         <p class="btn"><span class="glyphicon glyphicon-arrow-down"></span>
@@ -318,7 +318,7 @@
                         <div id="button2Analytics" style="display: none">
                             <p class="btn center-block"><span class="glyphicon glyphicon-arrow-down"></span></p>
 
-                            <p class="bg-success text-success btn text-wrap">A reporting tool has been chosen! Proceed to <b>step 4</b>.</p>
+                            <p class="bg-success text-success btn text-wrap">A reporting tool has been chosen! Please proceed to <b>step 4</b>.</p>
                         </div>
                         <script>
                             function myFunctionB2A() {
@@ -358,7 +358,7 @@
                         <div id="button2dashboard" style="display: none">
                             <p class="btn center-block"><span class="glyphicon glyphicon-arrow-down"></span></p>
 
-                            <p class="bg-success text-success btn text-wrap">Okay! You can proceed to <b>step 3</b>. </p>
+                            <p class="bg-success text-success btn text-wrap">Okay! Please proceed to <b>step 3</b>. </p>
                         </div>
                         <script>
                             function myFunctionB2D() {
@@ -400,11 +400,11 @@
 
 <!-- Step 3 - Start -->
 <div class="container">
-    <h3 class="page-header">Step 3: Would you like assistance and support from IT?</h3>
+    <h3 class="page-header">Step 3: Would you like IT to (help) build a dashboard and provide support?</h3>
     <div id="buttonStep3" style="display: none">
         <div class="row">
             <div class="col-xs-12">
-                <p class="lead text-center bg-info btn text-info center-block">Would you like the BI team to <b>assist building</b> a dashboard and to <b>provide support</b> after implementation?</p>
+                <p class="lead text-center bg-info btn text-info center-block">Would you like the BI team to <b>assist building</b> a dashboard or to <b>completely build</b> the dashboard for you?</p>
                 <div class="row">
                     <div class="col-xs-6 text-center">
                         <p class="btn"><span class="glyphicon glyphicon-arrow-down"></span>
@@ -425,7 +425,7 @@
                 <div id="button3Yes" style="display: none">
                     <p class="btn center-block"><span class="glyphicon glyphicon-arrow-down"></span></p>
 
-                    <p class="bg-success text-success btn">A reporting tool has been chosen! Proceed to <b>step 4</b>.</p>
+                    <p class="bg-success text-success btn">A dashboarding tool has been chosen! Please proceed to <b>step 4</b>.</p>
                 </div>
                 <script>
                     function myFunctionB3Y() {
@@ -483,7 +483,7 @@
 
                             <div id="button31Yes" style="display: none">
                                 <p class="btn"><span class="glyphicon glyphicon-arrow-down"></span></p>
-                                <p class="bg-success text-success btn text-wrap">A reporting tool has been chosen! Proceed to <b>step 4</b>. </p>
+                                <p class="bg-success text-success btn text-wrap">A dashboarding tool has been chosen! Please proceed to <b>step 4</b>. </p>
                             </div>
                             <script>
                                 function myFunctionB31Y() {
@@ -540,7 +540,7 @@
 
                                         <div id="button32Yes" style="display: none">
                                             <p class="btn"><span class="glyphicon glyphicon-arrow-down"></span></p>
-                                            <p class="bg-success text-success btn text-wrap">A reporting tool has been chosen! Proceed to <b>step 4</b>. </p>
+                                            <p class="bg-success text-success btn text-wrap">A dashboarding tool has been chosen! Please proceed to <b>step 4</b>. </p>
                                         </div>
                                         <script>
                                             function myFunctionB32Y() {
@@ -579,7 +579,7 @@
 
                                         <div id="button32No" style="display: none">
                                             <p class="btn center-block"><span class="glyphicon glyphicon-arrow-down"></span></p>
-                                            <p class="bg-danger text-danger btn text-wrap">A reporting tool has been chosen! Proceed to <b>step 4</b>.</p>
+                                            <p class="bg-warning text-warning btn text-wrap">A dashboarding tool has been chosen! Please proceed to <b>step 4</b>.</p>
                                         </div>
                                         <script>
                                             function myFunctionB32N() {
@@ -779,7 +779,7 @@
             <div id="buttonKAM" style="display: none">
                 <div class="col-xs-6">
                     <p class="center-block"><span class="btn btn-warning btn-lg">
-				Please contact the the <a href="mailto:Business_Intelligence_Team@BOREALISGROUP.COM">Business Intelligence team</a> to define any quick wins putting the data in the system
+				Please contact the <a href="mailto:Business_Intelligence_Team@BOREALISGROUP.COM">Business Intelligence team</a> to define any quick wins putting the data in the system
 				<br>It might be needed to contact your Key Account Manager to instigate a project. </br>
 				</span></p>
                 </div>
