--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <div class="row">
                     <!-- start step 2 >> Analytics -->
                     <div class="col-xs-6 text-center">
-                        <p class="center-block"><span class="btn btn-success btn-lg" onclick="myFunctionB2A()">Detailed Analysis</span></p>
+                        <p class="center-block"><span class="btn btn-primary btn-lg" onclick="myFunctionB2A()">Detailed Analysis</span></p>
 
                         <div id="button2Analytics" style="display: none">
                             <p class="btn center-block"><span class="glyphicon glyphicon-arrow-down"></span></p>
@@ -400,11 +400,11 @@
 
 <!-- Step 3 - Start -->
 <div class="container">
-    <h3 class="page-header">Step 3: Would you like IT to (help) build a dashboard and provide support?</h3>
+    <h3 class="page-header">Step 3: Would you like involvement of IT experts?</h3>
     <div id="buttonStep3" style="display: none">
         <div class="row">
             <div class="col-xs-12">
-                <p class="lead text-center bg-info btn text-info center-block">Would you like the BI team to <b>assist building</b> a dashboard or to <b>completely build</b> the dashboard for you?</p>
+                <p class="lead text-center bg-info btn text-info center-block">Would you like a <b>BI team Full-Service</b> dashboard or create a <b>Self-Service</b> dashboard?</p>
                 <div class="row">
                     <div class="col-xs-6 text-center">
                         <p class="btn"><span class="glyphicon glyphicon-arrow-down"></span>
@@ -420,7 +420,7 @@
         <div class="row">
             <!-- start step 3 >> Yes       -->
             <div class="col-xs-6 text-center">
-                <p class="center-block"><span class="btn btn-success btn-lg" onclick="myFunctionB3Y()">Yes</span></p>
+                <p class="center-block"><span class="btn btn-primary btn-lg" onclick="myFunctionB3Y()">Full-Service<br><font size="-1">(BI team [helps] build & supports)</span></p>
 
                 <div id="button3Yes" style="display: none">
                     <p class="btn center-block"><span class="glyphicon glyphicon-arrow-down"></span></p>
@@ -461,7 +461,7 @@
             <!-- start step 3 >> No      -->
             <div class="col-xs-6 text-center">
 
-                <p class="center-block"><span class="btn btn-danger btn-lg" onclick="myFunctionB3N()">No</span></p>
+                <p class="center-block"><span class="btn btn-info btn-lg" onclick="myFunctionB3N()">Self-Service<br><font size="-1">(limited support)</span></p>
 
                 <div id="button3No" style="display: none">
                     <p class="btn center-block"><span class="glyphicon glyphicon-arrow-down"></span></p>
@@ -699,7 +699,7 @@
 				<br>Available as both <b>Full-Service IT</b> tool and <b>Self-Service</b>.</br>
 				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/Analysis-for-Office-Wiki.aspx">
 				<img src="https://user-images.githubusercontent.com/63850645/80611674-35e31700-8a3b-11ea-84c9-b7b5c36d010f.png" alt="AfO">
-				<br><font size="-2">(click here)</font></a></span></p>
+				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
                 </div>
             </div>
 
@@ -716,7 +716,7 @@
 				<br>Currently <b>only</b> available as <b>Self-Service</b> tool.</br>
 				<a href="https://borena.mignetwork.net/coll/cop/supbinet/PowerBi%20Wiki/Home.aspx">
 				<img src="https://user-images.githubusercontent.com/63850645/80610779-0ed81580-8a3a-11ea-9803-99d107109a66.png" alt="Power BI">
-				<br><font size="-2">(click here)</font></a></span></p>
+				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
                 </div>
             </div>
 
@@ -732,7 +732,7 @@
 				<br>Available as <b>Self-Service</b> tool in specific departments.</br>
 				<a href="https://borena.mignetwork.net/coll/cop/supbinet/Microstrategy%20tool/Home.aspx">
 				<img src="https://user-images.githubusercontent.com/63850645/80611228-a473a500-8a3a-11ea-8c01-201fe0b99d22.png" alt="MicroStrategy">
-				<br><font size="-2">(click here)</font></a></span></p>
+				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
                 </div>
             </div>
 
@@ -748,7 +748,7 @@
 				<br><b>Only</b> available as <b>Self-Service</b> tool in specific departments.</br>
 				<a href="https://www.qlik.com/us/products/qlikview">
 				<img src="https://user-images.githubusercontent.com/63850645/80611526-fe746a80-8a3a-11ea-871c-7259da5bccbe.png" alt="Qlick">
-				<br><font size="-2">(click here)</font></a></span></p>
+				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
                 </div>
             </div>
 
@@ -763,7 +763,7 @@
 				<br>Available as both <b>Full-Service IT</b> tool and <b>Self-Service</b>.</br>
 				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/Analysis-for-Office-Wiki.aspx">
 				<img src="https://user-images.githubusercontent.com/63850645/80611709-44313300-8a3b-11ea-899b-7b8763958c6d.png" alt="SAP Analytics Cloud">
-				<br><font size="-2">(click here)</font></a></span></p>
+				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
                 </div>
             </div>
 			
