--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 				<font size="-1">(other reporting tools are only intended for high level view on data via Dashboards)</font>
 				<br>
 				<br>Available as both <b>Full-Service IT</b> tool and <b>Self-Service</b>.</br>
-				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/Analysis-for-Office-Wiki.aspx" target="_blank">
+				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/Analysis-for-Office-Wiki.aspx" target="_blank" rel="noopener">
 				<img src="https://user-images.githubusercontent.com/63850645/80611674-35e31700-8a3b-11ea-84c9-b7b5c36d010f.png" alt="AfO">
 				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
                 </div>
@@ -714,7 +714,7 @@
 				<br>for end users to create their own dashboards.
 				<br>
 				<br>Currently <b>only</b> available as <b>Self-Service</b> tool.</br>
-				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/MS%20Power%20BI.aspx" target="_blank">
+				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/MS%20Power%20BI.aspx" target="_blank" rel="noopener">
 				<img src="https://user-images.githubusercontent.com/63850645/80610779-0ed81580-8a3a-11ea-9803-99d107109a66.png" alt="Power BI">
 				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
                 </div>
@@ -730,7 +730,7 @@
 				<br>intended for end users to create their own dashboards.
 				<br>
 				<br>Available as <b>Self-Service</b> tool in specific departments.</br>
-				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/MicroStrategy.aspx" target="_blank">
+				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/MicroStrategy.aspx" target="_blank" rel="noopener">
 				<img src="https://user-images.githubusercontent.com/63850645/80611228-a473a500-8a3a-11ea-8c01-201fe0b99d22.png" alt="MicroStrategy">
 				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
                 </div>
@@ -746,7 +746,7 @@
 				<br>intended for end users to create their own dashboards.
 				<br>
 				<br><b>Only</b> available as <b>Self-Service</b> tool in specific departments.</br>
-				<a href="https://www.qlik.com/us/products/qlikview" target="_blank">
+				<a href="https://www.qlik.com/us/products/qlikview" target="_blank" rel="noopener">
 				<img src="https://user-images.githubusercontent.com/63850645/80611526-fe746a80-8a3a-11ea-871c-7259da5bccbe.png" alt="Qlick">
 				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
                 </div>
@@ -761,7 +761,7 @@
 				<br>SAP Analytics Cloud is a cloud solution providing interactive
 				<br>visualizations and analytics capabilities to all users in one product.</br>
 				<br>Available as both <b>Full-Service IT</b> tool and <b>Self-Service</b>.</br>
-				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/SAP%20Analytics%20Cloud.aspx" target="_blank">
+				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/SAP%20Analytics%20Cloud.aspx" target="_blank" rel="noopener">
 				<img src="https://user-images.githubusercontent.com/63850645/80611709-44313300-8a3b-11ea-899b-7b8763958c6d.png" alt="SAP Analytics Cloud">
 				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
                 </div>
