--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
 				<br>It is the only supported tool for detailed data analysis.</br>
 				<font size="-1">(other reporting tools are only intended for high level view on data via Dashboards)</font>
 				<br>
-				<br>Available as both <b>Full-Service IT</b> tool and <b>Self-Service</b>.</br>
+				<br>Available as both a <b>Full-Service IT</b> tool and a <b>Self-Service</b>.</br>
 				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/Analysis-for-Office-Wiki.aspx" target="_blank" rel="noopener">
 				<img src="https://user-images.githubusercontent.com/63850645/80611674-35e31700-8a3b-11ea-84c9-b7b5c36d010f.png" alt="AfO">
 				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
@@ -707,13 +707,13 @@
                 <div class="col-xs-6">
                     <!-- <p class="lead text-center bg-info btn text-info center-block"> -->
                     <p class="center-block"><span class="btn btn-warning btn-lg">
-				<b>MicroSoft Power BI</b> 
+				<b>Microsoft Power BI</b> 
 				<br>
 				<br>Power BI aims to provide interactive visualizations and 
 				<br>business intelligence capabilities intended
 				<br>for end users to create their own dashboards.
 				<br>
-				<br>Currently <b>only</b> available as <b>Self-Service</b> tool.</br>
+				<br>Currently <b>only</b> available as a <b>Self-Service</b> tool.</br>
 				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/MS%20Power%20BI.aspx" target="_blank" rel="noopener">
 				<img src="https://user-images.githubusercontent.com/63850645/80610779-0ed81580-8a3a-11ea-9803-99d107109a66.png" alt="Power BI">
 				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
@@ -729,7 +729,7 @@
 				<br>MicroStrategy aims to provide interactive visualizations
 				<br>intended for end users to create their own dashboards.
 				<br>
-				<br>Available as <b>Self-Service</b> tool in specific departments.</br>
+				<br>Available as a <b>Self-Service</b> tool in specific departments.</br>
 				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/MicroStrategy.aspx" target="_blank" rel="noopener">
 				<img src="https://user-images.githubusercontent.com/63850645/80611228-a473a500-8a3a-11ea-8c01-201fe0b99d22.png" alt="MicroStrategy">
 				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
@@ -740,12 +740,12 @@
                 <div class="col-xs-6">
                     <!-- <p class="lead text-center bg-info btn text-info center-block"> -->
                     <p class="center-block"><span class="btn btn-success btn-lg">
-				<b>Qlick</b> 
+				<b>Qlik</b> 
 				<br>
-				<br>Qlick aims to provide interactive visualizations 
+				<br>Qlik aims to provide interactive visualizations 
 				<br>intended for end users to create their own dashboards.
 				<br>
-				<br><b>Only</b> available as <b>Self-Service</b> tool in specific departments.</br>
+				<br><b>Only</b> available as a <b>Self-Service</b> tool in specific departments.</br>
 				<a href="https://www.qlik.com/us/products/qlikview" target="_blank" rel="noopener">
 				<img src="https://user-images.githubusercontent.com/63850645/80611526-fe746a80-8a3a-11ea-871c-7259da5bccbe.png" alt="Qlick">
 				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
@@ -760,7 +760,7 @@
 				<br>
 				<br>SAP Analytics Cloud is a cloud solution providing interactive
 				<br>visualizations and analytics capabilities to all users in one product.</br>
-				<br>Available as both <b>Full-Service IT</b> tool and <b>Self-Service</b>.</br>
+				<br>Available as both a <b>Full-Service IT</b> tool and a <b>Self-Service</b>.</br>
 				<a href="https://borealisgroup.sharepoint.com/sites/BICommunity/SitePages/SAP%20Analytics%20Cloud.aspx" target="_blank" rel="noopener">
 				<img src="https://user-images.githubusercontent.com/63850645/80611709-44313300-8a3b-11ea-899b-7b8763958c6d.png" alt="SAP Analytics Cloud">
 				<br><font style="color:white" size="-2">(click here)</font></a></span></p>
