--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 
 <!-- Step 4 - Start -->
 <div class="container">
-    <h3 class="page-header">Step 4: Recommended reporting tool for your needs !</h3>
+    <h3 class="page-header">Step 4: Recommended reporting tool for your needs!</h3>
     <div class="row">
         <div id="buttonStep4" style="display: none">
 
@@ -770,8 +770,8 @@
 			<div id="buttonEXCEL" style="display: none">
                 <div class="col-xs-6">
                     <p class="center-block"><span class="btn btn-danger btn-lg text-wrap">
-				Unfortunately our advice needs to be to continue working in Excel
-				<br>For reporting within Borealis some sort of data governance needs to be put in place</br>
+				Unfortunately our advice needs to be to continue working in Excel.
+				<br>For reporting within Borealis some sort of data governance needs to be put in place.</br>
 				</span></p>
                 </div>
             </div>
@@ -779,7 +779,7 @@
             <div id="buttonKAM" style="display: none">
                 <div class="col-xs-6">
                     <p class="center-block"><span class="btn btn-warning btn-lg">
-				Please contact the <a href="mailto:Business_Intelligence_Team@BOREALISGROUP.COM">Business Intelligence team</a> to define any quick wins putting the data in the system
+				Please contact the <a href="mailto:Business_Intelligence_Team@BOREALISGROUP.COM">Business Intelligence team</a> to define any quick wins putting the data in the system.
 				<br>It might be needed to contact your Key Account Manager to initiate a project. </br>
 				</span></p>
                 </div>
